chore: Minor fixed on Entities && removed User

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=postgresql
 spring.datasource.driver.class.name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/nombre_db_placeholder
+spring.datasource.url=jdbc:postgresql://localhost/test_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -9,4 +9,4 @@ spring.jpa.show-sql=true
 server.port=3000
 
 #create-drop || update
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
