Implementación de JWT y cambios en create_date de Client

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,7 @@ server.port=3000
 
 #create-drop || update
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#JWT
+
+security.jwt.key.private="JWT_PRIVATE_KEY"
